summative.moria.Moria.scala.error
Erreur de compilation :
Moria:5: error: '(' expected but identifier found.
if estSurBiscuit() recupBiscuit()
   ^